# ecommerce

./: pyproject.toml
ecomsite/ecomsite/: settings.py  urls.py
ecomsite/shop/: admin.py  models.py  urls.py  views.py
ecomsite/shop/migrations/: 0001_initial.py  0002_order_alter_products_options.py  0003_order_totalprice.py  0004_rename_totalprice_order_total.py
ecomsite/shop/static/shop/: style.css
ecomsite/shop/templates/shop/: checkout.html  detail.html  index.html
